document: cleand up code bug fix: header meny still visible in mobile mode

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,77 +5,81 @@ header{
     background-color: u.$secondary-background-color;
     padding: 1rem;
 
-    div.logo-container{
-        @include u.section(100%, 100%, row , flex-start, center);
-        height: 8.2rem;
+    @media screen and ( max-width: u.$tablet-size){
+        @include u.section(100vw, 10vh, row, center, flex-start);
+    }
+}
 
-        picture{
-            min-width: 128px; //no smaller then 128px otherwise the logo gets croped
-            height: inherit;
 
-            img{
-                object-fit: scale-down;
-            }
+/*
+================= logo in header =============================
+*/
+
+div.logo-container{
+    @include u.section(100%, 100%, row , flex-start, center);
+    height: 8.2rem;
+
+    picture{
+        min-width: 128px; //OBS! no smaller then 128px in desktop otherwise the logo gets croped
+        height: inherit;
+
+        img{
+            object-fit: scale-down;
         }
 
-    div.logo-text-container{
+        @media screen and ( max-width: u.$mobile-size){
+            min-width: 100px;
+        }
+    }
+
+    div.logo-header-container{
         @include u.flex(row, flex-start, flex-end);
-            height: inherit;
-            
-            h1{
-                color: u.$secondary-text-color;
-                font-size: u.$large-header-font;
+        height: inherit;
+        
+        h1 {
+            color: u.$secondary-text-color;
+            font-size: u.$large-header-font;
 
-                @media screen and ( max-width: u.$tablet-size){
-                    font-size: u.$medium-font;
-                    max-width: 90px;
-                }
-
+            @media screen and ( max-width: u.$tablet-size){
+                @include u.flex(column, center, flex-start);
+                font-size: u.$medium-font;
+                max-width: 90px;
             }
         }
     }
 
     @media screen and ( max-width: u.$tablet-size){
-        @include u.section(100vw, 10vh, row, center, flex-start);
+        @include u.section(100%, 100%, row , flex-start, center);
+        gap: 0px;
 
-        div.logo-container{
-            @include u.section(100%, 100%, row , flex-start, center);
-            gap: 20px;
-
-            .logo-text-container{
-                @include u.flex(column, center, flex-start)
-               }
-        }
-    }   
+    }
 }
 
+
+/*
+===================  meny in header  ==============================
+*/
 
 nav.header-nav{
     display: flex;
     width: 100%;
     height: 100%;
 
-    ul{
+    ul {
         @include u.section(100%, 100%, row , space-evenly, center);
-        list-style-type: none;
 
-        li{
-
-            a{
-                font-size: u.$normal-font;
-                color: u.$secondary-text-color;
-            }
+        li  a {
+            font-size: u.$normal-font;
+            color: u.$secondary-text-color;
         }
     }
-
+    
     @media screen and (max-width: u.$tablet-size) {
-        nav.header-nav{
-            background-color: gray;
-            width: 30%;
-            
-            ul{
-                display: none;
-            }
+        background-color: gray;
+        width: 30%;
+        
+        ul {
+            display: none;
         }
     }
 }
